# scoring_client_opencode

./: README.md
odd-agent/: .gitignore  README.md  evaluate.py  main.py  opencode.json  pyproject.toml
odd-agent/.opencode/agents/: odd-agent.md
odd-agent/.opencode/commands/: evaluate.md
odd-agent/.opencode/skills/: moralscore.md  odd-analysis.md  web-research.md
odd-agent/.opencode/skills/moralscore/: SKILL.md
odd-agent/.opencode/skills/odd-analysis/: SKILL.md
odd-agent/.opencode/skills/web-research/: SKILL.md
odd-agent/app/: __init__.py  llm.py  main.py  moralscore.py  prompts.py  schemas.py  utils.py  web_search.py
