[project]
name = "odd-agent"
version = "0.1.0"
description = "POC Python/OpenCode pour scorer une entreprise selon les 17 ODD de l'ONU."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "openai>=2.37.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tavily-python>=0.7.24",
    "unidecode>=1.4.0",
]

[project.scripts]
odd-agent = "app.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
